[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "certificate-authority"
version = "0.1.0"
description = "A Python-based Certificate Authority for managing X.509 certificates"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
]
keywords = ["certificate", "authority", "x509", "ssl", "tls", "pki"]
dependencies = [
    "cryptography>=42.0.0",
    "aiofiles>=23.2.1",
    "asn1crypto>=1.5.1",
    "click>=8.1.7",
    "pyjks>=20.0.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "aiohttp>=3.9.3"
]
dev = [
    "black>=24.2.0",
    "flake8>=7.0.0",
    "pylint>=3.0.3",
    "mypy>=1.8.0",
    "isort>=5.13.2"
]

[project.urls]
Homepage = "https://github.com/yourusername/python-certificate-authority"
Documentation = "https://github.com/yourusername/python-certificate-authority#readme"
Repository = "https://github.com/yourusername/python-certificate-authority.git"
Issues = "https://github.com/yourusername/python-certificate-authority/issues"

[project.scripts]
ca = "CA.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=CA"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
]
good-names = ["i", "j", "k", "ex", "Run", "_", "fp", "id"]
ignore = ["CVS", ".git", ".pytest_cache", "build", "dist"]

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/CA"]

[tool.hatch.build.targets.sdist]
packages = ["src/CA"] 